# backend/docs/swagger.yaml
@@ -185,6 +185,8 @@ definitions:
         type: string
       username:
         type: string
+      wecomBound:
+        type: boolean
     type: object
   domain.UserGroup:
     properties:
@@ -1079,24 +1081,6 @@ paths:
       security:
       - BearerAuth: []
       summary: 获取企业微信绑定授权地址
-      tags:
-      - Auth
-  /api/v1/auth/wecom/binding:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/router.wecomBindingResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/router.errorDocResponse'
-      security:
-      - BearerAuth: []
-      summary: 查询当前用户的企业微信绑定状态
       tags:
       - Auth
   /api/v1/auth/wecom/callback:
